<resources>
    <!-- error toast -->
    <string name="com_toast_network_error">网络异常</string>
    <string name="com_toast_timeout">链接超时</string>

    <string name="no_bgm">无音乐</string>
    <string name="add_bgm">添加BGM</string>
    <string name="add_bgm_hint">添加背景音乐，你的话题更有趣</string>
    <string name="selected">选定</string>
    <string name="tags_what_are_you_interested_in">你对什么感兴趣？</string>
    <string name="tags_selection_title_hint">选择喜欢的标签，让往往更懂你</string>
    <string name="tags_confirm_title">兴趣大杂烩</string>
    <string name="tags_confirm_title_hint">你的兴趣全在这里，返回可以重新选择哦</string>
    <string name="tags_selected_count">已选</string>
    <string name="tags_selected">选定</string>
    <string name="tags_confirm">确定</string>
    <string name="tags_all">大量知识</string>
    <string name="com_text_length_format">最多输入%d个字</string>

    <string name="dialog_inputsign_title">输入个性签名</string>
    <string name="dialog_inputsign_note">最多输入15个字</string>
    <string name="dialog_inputsign_hint">请输入个性签名</string>
    <string name="dialog_inputname_title">输入新昵称</string>
    <string name="dialog_inputname_note">最多输入12个字</string>
    <string name="dialog_inputname_hint">输入新昵称</string>

    <!--搜索页面-->
    <string name="home_search_lack_title">搜索帮助：</string>
    <string name="home_search_lack_note">1.在输入名称后按下空格生成标签\n2.可以使用标签+关键词联合搜索\n3.只搜索标签是无法搜索到趣晒的哦\n4.手机号只能用于搜索用户，请输入完整的手机号码</string>


    <string name="group_add_success_need_validate">申请成功，请等待群主验证</string>
    <string name="group_add_success">成功加入该趣聊</string>
    <string name="group_add_format_pay_hint">加入此趣聊需要支付%1d宝石</string>
    <string name="group_mi_add_format_pay_hint">加入此觅聊需要支付%1d宝石</string>


    <string name="mt_game_time_colon">游戏时间：</string>
    <string name="mt_game_number_of_person_colon">游戏人数：</string>
    <string name="mt_game_price_colon">支付钻石：</string>
    <string name="mt_people">人</string>
    <string name="mt_unlimited">不限</string>
    <string name="mt_gemstone">钻</string>
    <string name="mt_minute">分钟</string>
    <string name="mt_create_pay">创建并支付</string>
    <string name="mt_cancel">取消</string>
    <string name="mt_confirm">确定</string>


    <string name="newguide_title">基础资料</string>
    <string name="newguide_header_note">真实头像更容易获得好感哦</string>
    <string name="newguide_name">昵称</string>
    <string name="newguide_birthday">生日</string>
    <string name="newguide_gender">性别</string>
    <string name="newguide_btn_next">下一步</string>
    <string name="newguide_group_btn_next">完成</string>
    <string name="newguide_recommend_friend">好友推荐</string>
    <string name="newguide_recommend_gourp">趣聊推荐</string>


    <string name="set_top">置顶</string>

</resources>