<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.frame.component.view.SocialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:toolbar_left_icon="@drawable/common_ic_back"/>

        <LinearLayout
            android:id="@+id/selected_count_layout"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="14dp">

            <TextView
                android:id="@+id/selected_count_hint_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tags_selected_count"
                android:textColor="@color/common_text_blank_dark"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/selected_count_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/common_blue_deep"
                android:textSize="16sp"
                />
        </LinearLayout>

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar_layout"
        >

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tags_what_are_you_interested_in"
            android:textColor="@color/common_text_blank"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/title_hint_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tags_selection_title_hint"
            android:textColor="@color/common_text_blank"
            android:textSize="13sp"
            android:layout_marginTop="7dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ts_content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_layout"
        android:orientation="vertical">


        <!--<android.support.design.widget.TabLayout-->
            <!--android:id="@+id/tab_layout"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@+id/title_layout"-->
            <!--app:tabMode="scrollable"-->
            <!--app:tabIndicatorColor="@color/common_blue_deep"-->
            <!--app:tabIndicatorHeight="1dp"-->
            <!--app:tabSelectedTextColor="@color/common_blue_deep"-->
            <!--app:tabTextColor="@color/common_text_blank_dark">-->

        <!--</android.support.design.widget.TabLayout>-->

        <com.ogaclejapan.smarttablayout.SmartTabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            app:stl_customTabTextLayoutId="@layout/tab_text_blue_dark"
            app:stl_customTabTextViewId="@id/custom_text"
            app:stl_distributeEvenly="true"
            app:stl_dividerThickness="0dp"
            app:stl_indicatorColor="@color/common_blue"
            app:stl_indicatorCornerRadius="2dp"
            app:stl_indicatorInterpolation="smart"
            app:stl_indicatorThickness="3dp"
            app:stl_indicatorWidth="34dp"
            app:stl_underlineColor="@android:color/transparent"
            app:stl_underlineThickness="0px"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffe5e5e5"
            />

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v4.view.ViewPager>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tag_all_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="32dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/common_ic_tag_all" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tags_all"
            android:textColor="#ff189aff"
            android:textSize="10sp"
            />

    </LinearLayout>


</RelativeLayout>